--- a/styles.css
+++ b/styles.css
@@ -1,77 +1,130 @@
-.nav-logo {
-    height: 15%;
-    width: 16%;
-    float: left;
+/*-----------------------------------
+    navegation bar
+-----------------------------------*/
+
+nav {
+    display: inline-block;
 }
 
-ul.navbar {
-    list-style-type: none;
-    margin: 0;
+.socialmedia {
+    display: inline;
+}
+
+.nav-logo {
+    width: 16%;
     padding: 14px 16px;
-    text-align: right;
-    color: lightslategray;
-    padding: 14px 16px;
-    align-content: center;
-    font-family: 'Work Sans', sans-serif;
-    letter-spacing: 2px;
-    vertical-align: center;
+}
+
+
+/* .nav {
+      display: inline;
+      padding: 25px;
+  }*/
+
+ul {
+    color: #a6a8ab;
+    text-decoration: none;
+    display: inline;
 }
 
 li {
-    display: inline;
-    text-align: center;
+    list-style-type: none;
+    padding: 14px 16px;
+    color: #a6a8ab;
+    float: right;
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 600;
+    size: 16px;
+    /*
+      letter-spacing: 2px;
+      text-align: right;
+      padding: 25px;
+      display: inline;
+      align-content: center;
+         margin: 0; */
 }
 
 .nav-logo-rgt {
+    padding: 14px 16px;
+}
+
+nav. {
+    color: #a6a8ab;
+    size: 16px;
+}
+
+#facebook {
     float: right;
     height: 1%;
-    width: 1%;
+    width: 4.5%;
+    background-color: #f1f2f2;
+}
+
+#twitter {
+    float: right;
+    height: 1%;
+    width: 6.3%;
+    background-color: #f1f2f2;
+    ;
 }
 
 .social-media-logo {
     position: relative;
 }
 
-@font-face {
-    font-family: 'Work-Sans ';
-    src: url('./assets/fonts/WorkSans/WorkSans-SemiBold.otf');
-}
 
-@font-face {
-    font-family: 'Work Sans-SemiBold';
-    src: url('./assets/fonts/WorkSans/WorkSans-SemiBold.ttf');
-}
-
-@font-face {
-    font-family: 'Work-Sans-SemiBold';
-    src: url('./assets/fonts/WorkSans/WorkSans-SemiBold.woff');
-}
+/*-----------------------------------
+    section 1
+-----------------------------------*/
 
 .blue-banner {
     color: white;
     background-color: deepskyblue;
-    width: 60%;
-    height: 3em;
     font-family: 'Work Sans', sans-serif;
+    font-weight: 800;
     font-size: 3em;
-    margin: 100px 150px 100px 80px;
-    padding: 20px 0px 0px 50px;
+    padding: 10px;
+    width: 80%;
+    text-align: center;
+    margin-top: 40%;
+    margin-left: 10%;
+    margin-bottom: 5%;
 }
 
 .paragraph {
     color: white;
+    /*  font-family: 'Work Sans', san-serif;*/
+    font-weight: 400;
+    margin-left: 15%;
+    font-size: 16px;
 }
 
+#sec1btn {
+    font-family: 'Roboto Condensed', sans-serif;
+    margin-left: 15%;
+    margin-top: 5%;
+}
+
+.hero-phone {
+    margin-top: 12.5%;
+}
+
+
+/*-----------------------------------
+    section 2
+-----------------------------------*/
+
 .yeti {
-    height: 30em;
+    height: 25em;
     position: relative;
     z-index: 2;
 }
 
 .secdiv {
-    color: slategrey;
-    font-size: 24px;
+    color: #a6a8ab;
+    font-size: 18px;
     font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 700;
 }
 
 .parrafo2 {
@@ -80,10 +133,45 @@ li {
 }
 
 .secdiv2 {
-    font-size: 38px;
+    font-size: 2.5em;
     color: rgb(61, 184, 147);
     font-family: 'Work Sans', sans-serif;
-    font-weight: 
+    font-weight: 800;
+}
+
+
+/*-----------------------------------
+    section 3
+-----------------------------------*/
+
+.tilted-phone {
+    height: 40em;
+    padding: 25px 50px;
+}
+
+
+/*.tilted-phone {
+    color: deepskyblue;
+}
+*/
+
+.well well-lg {
+    width: 100%;
+    /*background: #ccc;*/
+    margin: 10px 1%;
+    padding: 1%;
+    margin: 25px 50px 75px;
+}
+
+@media all and (max-width: 900px) {
+    article {
+        width: 48%
+    }
+}
+
+.app-image {
+    width: 100%;
+    align-items: center;
 }
 
 #firstdiv {
@@ -93,9 +181,87 @@ li {
     height: 45em;
 }
 
+#secbg {
+    background-image: url(./assets/bkgrnd.svg);
+    background-position: center;
+    background-size: cover;
+    opacity: 0.6;
+    z-index: 9999;
+}
+
 #secdiv {
     background-image: url(./assets/coversharks-mark-white.svg);
     background-position: center;
     background-size: cover;
     height: 30em;
+}
+
+#thrirddiv {
+    background-image: url(./assets/bkgrnd.svg);
+    background-position: center;
+    background-size: cover;
+    height: 39em;
+}
+
+
+/*-----------------------------------
+    section 4
+-----------------------------------*/
+
+#sec4btn {
+    margin: 10%;
+    padding: 25px;
+}
+
+#sec4 {
+    background-color: lightgrey;
+}
+
+#sec4p {
+    padding: 30px 50px 75px 100px;
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 800;
+    color: #2995c7;
+}
+
+#sec4p2 {
+    color: #2995c7;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 700;
+    font-size: 2em;
+    padding: 50px 30px 30px 50px;
+}
+
+
+/*-----------------------------------
+    footer
+-----------------------------------*/
+
+.coversharks-bluelogo {
+    width: 20%;
+}
+
+.facebook-footer {
+    width: 2%;
+}
+
+.twitter-footer {
+    width: 5%;
+}
+
+td {
+    border: 1px solid black;
+    width: 50%;
+    height: 50%;
+    padding: 15%;
+}
+
+table {
+    padding: 15px;
+}
+
+th,
+td {
+    padding: 15px;
+    text-align: left;
 }
